--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,5 +27,13 @@ services:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
+    App\EventSubscriber\EntityCreatedSubscriber:
+        tags:
+        - { name: doctrine.event_subscriber }
+
+    App\EventSubscriber\EntityChangeSubscriber:
+        tags:
+        - { name: 'doctrine.event_subscriber' }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
