--- a/config/services.yaml
+++ b/config/services.yaml
@@ -35,5 +35,8 @@ services:
         tags:
         - { name: 'doctrine.event_subscriber' }
 
+    Symfony\Component\HttpFoundation\Request:
+        autowire: true
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
