--- a/.env
+++ b/.env
@@ -29,11 +29,12 @@ APP_SECRET=0fc41d2caf4cfa07d9d74183c4bc9cec
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+DATABASE_URL="mysql://scoopapp_ubereat:g7-Tmx[TarZ+@51.178.201.97:3306/scoopapp_ubereat?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailgun-mailer ###
 # MAILER_DSN=mailgun://KEY:DOMAIN@default?region=us
 # MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+MAILER_DSN=mailgun://e0a42accbca48e2cb1cd0cc5061644ab-ba042922-9c15b708:sandbox05c9b6f84f824b55bdaaa54b84ace8ba.mailgun.org@default?region=us
 ###< symfony/mailgun-mailer ###
