--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=0fc41d2caf4cfa07d9d74183c4bc9cec
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://scoopapp_ubereat:g7-Tmx[TarZ+@51.178.201.97:3306/scoopapp_ubereat?serverVersion=5.7"
+DATABASE_URL="mysql://scoopapp_ubereat:_n-j]pFkl3cT@51.178.201.97:3306/scoopapp_ubereat?serverVersion=5.7.33"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
